<resources>
    <string name="app_name">Edurelate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="ask_to_join_invite">Ask to join</string>
    <string name="invite_a_user">Invite a user</string>
    <string name="find_group">find group</string>
    <string name="leave_group">Leave this group</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="members">Members</string>
    <string name="group_chat">Chat</string>
    <string name="group_members">Members</string>
    <string name="group_forum">Forum</string>
    <string name="group_files">Files</string>
    <string name="groups_you_re_in">Groups you\'re in</string>
    <string name="most_recent_notif">Most recent notification</string>
    <string name="you_have_no_notif">You have no notifications</string>
    <string name="ask_anything">Ask anything</string>
    <string name="post">Post</string>
    <string name="discussion_topic">Topic</string>
    <string name="discussion_body">Body</string>
    <string name="group_discussions">Discussions</string>
    <string name="post_by">Post by</string>
    <string name="new_post">New discussion</string>
    <string name="new_comment">New comment</string>
    <string name="upload_a_new_file">Upload a file</string>
    <string name="upload">Upload</string>
    <string name="add_a_new_user">Add a new user</string>
    <string name="join_a_new_group">Join a new group</string>
    <string name="create_an_account">Create a New Account</string>
</resources>